fixed button tect alignment bug on iOS

--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -74,6 +74,8 @@ input{
     border-radius: 50%;
     font-size: 10vw;
     padding-top: 2vw;
+    padding-right: 0; /*for iOS*/
+    padding-left: 0;  /*for iOS*/
 }
 
 .tipSelected {
